string vaulues update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="device_type_label">Type</string>
     <string name="menu_item_info">HC2 info</string>
     <string name="menu_item_logout">logout</string>
-    <string name="title_sestions_all">sections: all</string>
+    <string name="title_sestions_all">Sections: all</string>
     <string name="title_login">Home Center</string>
-    <string name="title_section_name">in section: </string>
-    <string name="title_room_name">in room: </string>
+    <string name="title_section_name">Rooms in: </string>
+    <string name="title_room_name">Devices in: </string>
     <string name="title_device_details">device details</string>
     <string name="turn_on_internet">please turn on internet connection</string>
     <string name="username_pass_request">user name or password can\'t be empty</string>
